components/Menu/styles.module.css
.container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: 100vw;
    position: absolute;
    z-index: 9999;
    background-color: var(--menu);
    opacity: 0
}

.link {
    cursor: pointer;
    margin: -1px;
    padding: 20px 20px;
    text-transform: uppercase;
    border: 2px solid var(--dark-border);
    background-color: var(--menu);
}

.closeButton {
    outline: none;
    border: none;
    cursor: pointer;
    position: absolute;
    top: 10px;
    right: 10px;
    width: 50px;
    height: 50px;
    background: transparent;
    position: absolute;
    z-index: 2;
  }

